--- a/templates/post-listings.html
+++ b/templates/post-listings.html
@@ -95,6 +95,7 @@
       <section style="max-width: 1000px; margin: 20px auto; padding: 20px;">
         <div class="seller-form">
           <form id="listingForm" action="/submit_listing" method="POST" onsubmit="return requireSignIn(event)">
+            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
             <div class="form-group">
               <label>Dining hall:</label>
               <div class="checkbox-group two-columns">
