--- a/templates/index.html
+++ b/templates/index.html
@@ -147,7 +147,7 @@
             <td>{{ listing.start_time }} - {{ listing.end_time }}</td>
             <td>${{ "%.2f"|format(listing.price if listing.price is not none else 0) }}</td>
             <td>{{ listing.payment_methods }}</td>
-            <td>
+            <td style="text-align: center;">
               <button type="button" class="contact-button" 
                       data-listing-id="{{ listing.id }}" 
                       data-listing-type="seller" 
